<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivDishImage"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_200sdp"
            android:background="@color/dish_image_background"
            android:contentDescription="@string/dish_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/ivFavoriteDish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/favorites"
            android:src="@drawable/ic_favorite_unselected"
            android:background="@drawable/favorite_button_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="@dimen/_10sdp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:hint="@string/title"
            app:hintTextColor="@color/blue_grey_700"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivDishImage">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:focusable="false"
                android:textColor="@color/grey_900"
                android:textSize="@dimen/_16sdp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:hint="@string/type"
            app:hintTextColor="@color/blue_grey_700"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilTitle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:textColor="@color/grey_900"
                android:textSize="@dimen/_16sdp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:hint="@string/category"
            app:hintTextColor="@color/blue_grey_700"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilType">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:textColor="@color/grey_900"
                android:textSize="@dimen/_16sdp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilIngredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:hint="@string/ingredients"
            app:hintTextColor="@color/blue_grey_700"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilCategory">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etIngredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:minLines="5"
                android:textColor="@color/grey_900"
                android:textSize="@dimen/_16sdp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilCookingTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:hint="@string/cooking_time"
            app:hintTextColor="@color/blue_grey_700"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilIngredients">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCookingTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:textColor="@color/grey_900"
                android:textSize="@dimen/_16sdp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilDirectionToCook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:hint="@string/directions_to_cook"
            app:hintTextColor="@color/blue_grey_700"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilCookingTime">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDirectionToCook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:focusable="false"
                android:minLines="5"
                android:textColor="@color/grey_900"
                android:textSize="@dimen/_16sdp"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="250dp"
            android:layout_height="200dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilDirectionToCook"
            app:lottie_loop="true"
            app:lottie_fileName="directions.json"
            app:lottie_autoPlay="true"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>