<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="200dp"
    android:layout_height="270dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.cardview.widget.CardView
        android:id="@+id/view"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        android:background="@drawable/ll_three"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_item_image_dashboard"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />

                <ImageButton
                    android:id="@+id/ibMore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_5sdp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/dish_image"
                    android:src="@drawable/ic_more"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>


            </androidx.constraintlayout.widget.ConstraintLayout>


            <LinearLayout
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/food"
                    android:contentDescription="@string/food" />

                <TextView
                    android:id="@+id/tv_item_name_dashboard"
                    android:layout_marginTop="10dp"
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:layout_height="wrap_content"
                    android:text="Non vegetarian pizza"
                    android:textSize="14sp"
                    android:layout_marginStart="10dp"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/time"
                    android:contentDescription="@string/clock" />

                <TextView
                    android:id="@+id/tv_item_price_dashboard"
                    android:layout_marginTop="10dp"
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:paddingTop="2dp"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="@string/_15_20_mins"
                    android:layout_marginStart="10dp"
                    />

            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/more_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="10dp"
                app:cardCornerRadius="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="15dp"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/tvNavigateToDetails"
                    android:padding="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tap_to_know_more"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />
            </androidx.cardview.widget.CardView>


        </LinearLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
