<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintVertical_chainStyle="spread_inside">

            <FrameLayout
                android:id="@+id/fl"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_200sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/ivDishImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    android:background="@color/dish_image_background"
                    android:contentDescription="@string/dish_image"/>

                <ImageView
                    android:id="@+id/ivAddDishImage"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="end|bottom"
                    android:contentDescription="@string/add_photo"
                    android:src="@drawable/ic_add_photo"
                    android:padding="@dimen/_16sdp"/>

            </FrameLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:hint="@string/title"
                app:hintTextColor="@color/blue_grey_700"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fl">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@color/grey_900"
                    android:textSize="@dimen/_16sdp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:hint="@string/type"
                app:hintTextColor="@color/blue_grey_700"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilTitle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:textColor="@color/grey_900"
                    android:textSize="@dimen/_16sdp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:hint="@string/category"
                app:hintTextColor="@color/blue_grey_700"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilType">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etCategory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:textColor="@color/grey_900"
                    android:textSize="@dimen/_16sdp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilIngredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:hint="@string/ingredients"
                app:hintTextColor="@color/blue_grey_700"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilCategory">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etIngredients"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:minLines="5"
                    android:textColor="@color/grey_900"
                    android:textSize="@dimen/_16sdp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilCookingTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:hint="@string/cooking_time"
                app:hintTextColor="@color/blue_grey_700"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilIngredients">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etCookingTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:textColor="@color/grey_900"
                    android:textSize="@dimen/_16sdp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilDirectionToCook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:hint="@string/directions_to_cook"
                app:hintTextColor="@color/blue_grey_700"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilCookingTime">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etDirectionToCook"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:minLines="5"
                    android:textColor="@color/grey_900"
                    android:textSize="@dimen/_16sdp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAddDish"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/add_dish"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold"
                app:backgroundTint="@color/app_bg_color"
                app:layout_constraintVertical_bias=".1"
                app:layout_constraintTop_toBottomOf="@id/tilDirectionToCook"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.44"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnAddDish"
                app:lottie_autoPlay="true"
                app:lottie_fileName="cooker.json"
                app:lottie_loop="true" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>